// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a field with a description 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="descriptionLabel"
      >
        Small description describing the field
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a field with a error collection 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field error"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      >
        sulu_admin.error_minitems
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a field with an error 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field error"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      >
        sulu_admin.error_minlength
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a field without a const error 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a field without a label 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render a required field with correct field type 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label1 *
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render correct label with correct field type 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render correct label with correct field type 2`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label2
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="date"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render field with correct values for grid 1`] = `
<DocumentFragment>
  <div
    class="item gridItem colSpan colSpan-8 space-before-0 space-after-3"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for=""
      >
        label1
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="errorLabel"
      />
    </div>
  </div>
</DocumentFragment>
`;
